# Analisis-Modelamiento-Numerico-I-2021-1.github.io

./: archives.html  authors.html  categories.html  flex-pelican-theme.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html  tasks.py
.github/workflows/: main.yml
author/: aula-b.html
category/: news.html
content/articles/: hello.md
tag/: pelican.html  python.html
